Fix search box on mobile devices

--- a/public/less/base.less
+++ b/public/less/base.less
@@ -119,6 +119,10 @@ dl {
 }
 
 @media only screen and (max-width: 767px) {
+  .lg-search-input-wrap input {
+    padding: 10px 8px;
+  }
+
   .lg-two-column-list {
     .lg-column {
       float: none;
